--- a/templates/movies.html
+++ b/templates/movies.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Explorer</title>
+    <link rel="stylesheet" href="/static/styles.css">
     <style>
         * {
             box-sizing: border-box;
@@ -317,6 +318,22 @@
     </style>
 </head>
 <body>
+    <!-- Navigation Bar -->
+<nav id="main-nav">
+    <div class="logo" onclick="goToHome()">ABYSS</div>
+    <ul>
+      <li><a href="#" id="leaderboardLink" onclick="goToLeaderboard()">Leaderboard</a></li>
+      <li><a href="#" onclick="goToCommunity()">Community</a></li>
+      <li class="profile-menu">
+        <a href="#" onclick="toggleProfileDropdown()">Profile</a>
+        <div id="profileDropdown" class="dropdown-content" style="display: none;">
+          <a href="#" onclick="goToProfile()">View Profile</a>
+          <a href="#" onclick="logout()">Logout</a>
+        </div>
+      </li>
+    </ul>
+  </nav>
+  
     <header>
         <h1>Movies</h1>
     </header>
